# ImageMetadataDetection

./: CMakeLists.txt  LICENSE  Makefile  README.md  README_CN.md  config.json  install.sh  test_compile.cpp  test_core.cpp  test_metadata.cpp  uninstall.sh
docs/: API_DOCUMENTATION.md  API_DOCUMENTATION_CN.md  图像元数据取证API服务架构设计文档.md
examples/cpp/: metadata_client.cpp
examples/javascript/: index.html  metadata_client.js
examples/python/: metadata_client.py
include/: metadata.hpp  network.hpp  service.hpp  storage.hpp  util.hpp
src/: main.cpp  metadata.cpp  network.cpp  service.cpp  storage.cpp  util.cpp
test_cmake/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  metadata_test.cpp
tests/functional/: metadata_extraction_test.cpp
tests/fuzzing/: metadata_fuzzer.cpp
tests/integration/: api_test.cpp
tests/security/: input_validation_test.cpp
tests/unit/: metadata_test.cpp
